helm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deployment
  name: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment
  strategy: {}
  template:
    metadata:
      labels:
        app: deployment
    spec:
      containers:
      - image: nic5694/pe-engineering-hackathon:latest
        imagePullPolicy: Always
        name: api
        ports:
        - containerPort: 5000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 5
