helm/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service
  name: service
spec:
  ports:
  - name: api-loadbalancer
    port: 8080
    protocol: TCP
    targetPort: 5000
  selector:
    app: deployment
  type: ClusterIP
